--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Flask==3.0.0
-Flask-Bootstrap5==3.1.0
+Flask-Bootstrap5==0.1.dev1
 Flask-CKEditor==0.5.1
 Flask-Gravatar==0.5.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.0.4
 Flask-WTF==1.1.1
 SQLAlchemy==2.0.21
-Werkzeug==2.3.7
+Werkzeug>=3.0.0
 WTForms==3.0.1
 email-validator==1.3.1
+gunicorn==20.1.0
